# totoronic

./: .gitignore  Cargo.toml  README.md
proto/: helloworld.proto  telemetry.proto
src/: client.rs  server.rs
web/: package-lock.json
web/hwmonitor/: package-lock.json  package.json
web/hwmonitor/src/: App.js  helloworld_grpc_web_pb.js
websrc/: package-lock.json  package.json
websrc/src/: App.jsx  App.tsx  telemetry.ts
