[package]
name = "totoronic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
futures = "0.3.26"
http = "0.2.8"
prost = "0.11.6"
rand = "0.8.5"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.3"
tonic-web = "0.5.0"
tower-http = "0.3.5"

[build-dependencies]
tonic-build = "0.8"
